--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body::-webkit-scrollbar {
     width: 5px;
 }
@@ -17,6 +21,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
     background-color: #8a2be2;
 }
+
 
 body {
     width: 100%;
@@ -35,7 +40,6 @@ body {
 
     scrollbar-width: thin;
     scrollbar-color: #8a2be2 #282C33;
-
 }
 
 .portfolio {
@@ -269,6 +273,150 @@ main {
     flex-direction: column;
 }
 
+/* PROJECTS */
+
+.projects-section {
+    padding: 2% 3%;
+    width: 100%;
+}
+
+.projects {
+    display: flex;
+    justify-content: space-around;
+
+    margin-top: 5vh;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    
+    width: 25%;
+    height: auto;
+    min-height: 45vh;
+
+    background-color: #111;
+
+}
+
+.project img {
+    max-height: 30vh;
+    opacity: 0.3;
+    transition: ease-in-out 300ms;
+}
+
+.project img:hover{
+    opacity: 1;
+}
+
+.project .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    padding: 5%;
+    height: 100%;
+}
+
+.project .text .link {
+    align-self: flex-end;
+}
+
+/* CONTACT-ME */
+
+.contact-me {
+    padding: 2% 3%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.contact-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40vh;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.cta-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border: 3px solid #8a2be2;
+    height: 100%;
+    flex: .5;
+}
+
+input,
+textarea {
+    width: 100%;
+    background-color: #282C33;
+    color: white;
+    font-size: 20px;
+    padding: 10px;
+}
+
+input::placeholder,
+textarea::placeholder,
+button {
+    color: whitesmoke;
+    font-family: 'Fira Code', monospace;
+    font-size: 20px;
+}
+
+input:focus, textarea:focus {
+    outline: none;
+}
+
+input {
+    flex: 0.1;
+    border-bottom: 3px solid #8a2be2;
+}
+
+textarea {
+    flex: 1;
+    resize: none;
+    border: 0;
+}
+
+.cta-form button {
+    width: 100%;
+    border: 0;
+    border-top: 3px solid #8a2be2;
+    padding: 3%;
+    background-color: #282C33;
+    color: white;
+}
+
+button {
+    transition: ease-in-out 300ms;
+}
+
+button:hover {
+    background-color: #8a2be2;
+    cursor: pointer;
+}
+
+/* FOOTER */
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #111;
+    
+    height: 8vh;
+    width: 100%;
+
+    margin-top: 5vh;
+}
+
 /* RESPONSIVE */
 
 @media screen and (max-width: 650px) {
@@ -363,8 +511,6 @@ main {
         align-items: center;
     }
 
-
-
     .skill {
         text-align: center;
         border: 1px solid #8a2be2;
@@ -372,5 +518,24 @@ main {
         margin: 3vh 0;
     }
 
+    .projects {
+        flex-direction: column;
+    }
 
+    .project {
+        width: 100%;
+        margin-bottom: 3vh;
+    }
+
+    .contact-me h2 {
+        text-align: center;
+    }
+
+    .contact-form {
+        width: 90%;
+    }
+
+    .cta-form {
+        flex: 1;
+    }
 }
